# metamorphic-contract-detector

./: .gitignore  LICENSE  README.md  cli.py  env.txt  hardhat.config.js  package-lock.json  package.json  pyproject.toml  requirements.txt  streamlit_app.py  streamlit_text.py  test.py
.streamlit/: config.toml
api/: app.py  check_selfdestruct.py  utils.py
contracts/: EvilStaking.sol  HonestERC20.sol  HonestStaking.sol  MetamorphicFactory.sol  RewardToken.sol
metamorphic_detect/: __init__.py  opcodes.py  src.py  utils.py
multi_call/: bytecode.py  multicall.py  utils.py
multi_call/schemas/: __init__.py  custom_types.py
test/: Tests.js
